@@ -1,6 +1,16 @@
-2017-02-14  Juan Jose Nicola  <jnicola@armant.core.os.greenbone.net>
+2017-02-14  Juan Jose Nicola  <juan.nicola@greenbone.net>
 
-	* doc/Doxyfile_full.in, doc/Doxyfile.in: Remove ALIASES and INPUT referred
+	* doc/Doxyfile_full.in: Remove ALIASES referred	to the nasl
+	docs generation.
+
+	* ChangeLog: Correction of a false entry.
+
+2017-02-14  Juan Jose Nicola  <juan.nicola@greenbone.net>
+
+	* doc/Doxyfile.in: Remove ALIASES and INPUT referred
+	to the nasl docs generation.
+
+	* doc/Doxyfile_full.in: Remove INPUT referred
 	to the nasl docs generation.
 
 2017-02-14  Juan Jose Nicola  <juan.nicola@greenbone.net>
